fixed thunderstorm cutoff

--- a/css/style.css
+++ b/css/style.css
@@ -548,7 +548,7 @@ body{
 
 .day-condition{
   margin-top: 10px;
-  font-size: 40px;
+  font-size: 35px;
   text-align: center;
   width: 100%;
 }
